# teamsparta-cli

./: .env  .gitignore  .npmignore  Cargo.toml  README.MD  example.config.json  package-lock.json  package.json  session
sprt/: get.binary.js  install.js  run.js  uninstall.js
src/: cli.rs  common.rs  config.rs  main.rs  sub.rs
src/sub/: compress.rs  credential.rs  dump.rs  resize.rs  unused.rs  unwatch.rs  watch.rs  webpify.rs
