[package]
name = "sparta-cli"
version = "0.1.0"
edition = "2021"
author = "러스트 스터디 팀원들"
about = "cli-tool for team sparta developers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-codepipeline = "0.28.0"
chrono = "0.4.26"
clap = {version = "4.3.4", features = ["derive"]}
colored = "2.0.0"
daemonize = "0.5.0"
dotenv = "0.15.0"
rand = "0.8.5"
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.97"
tokio = {version = "1.28.2", features = ["full"]}
