[package]
name = "sparta-cli"
version = "0.1.0"
edition = "2021"
author = "TeamSparta Devs"
about = "cli-tool for team sparta developers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-codepipeline = "0.28.0"
chrono = "0.4.26"
clap = {version = "4.3.4", features = ["derive"]}
colored = "2.0.0"
daemonize = "0.5.0"
dotenv = "0.15.0"
fast_image_resize = "2.7.3"
image = "0.24.6"
imagequant = "4.2.0"
oxipng = "8.0.0"
rand = "0.8.5"
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.97"
tokio = {version = "1.28.2", features = ["full"]}
walkdir = "2.3.3"
webp = "0.2.5"

[[bin]]
name = "sprt"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
opt-level = "s"
codegen-units = 1

# 주의: bin으로의 경로가 아니라 bin이 위치한 directory의 경로임
# ~/.zshrc -> export PATH=binary/located/dir:$PATH
# reload zsh or source ~/.zshrc